# eBoruta

./: .gitignore  .readthedocs.yaml  LICENCE  README.md  pyproject.toml  setup.py  test.py
Boruta/: Boruta.py  __init__.py  base.py  callbacks.py  structures.py  utils.py
docs/: build_docs.sh  conf.py  eBoruta.rst  index.rst  modules.rst  notebooks.rst  ref.bib  requirements.txt
docs/notebooks/: demo.ipynb  sequence_determinants_tutorial.ipynb
eBoruta/: __about__.py  __init__.py  algorithm.py  base.py  callbacks.py  containers.py  dataprep.py  eBoruta.py  structures.py  utils.py
notebooks/: demo.ipynb  sequence_determinants_tutorial.ipynb  stub.ipynb
src/: Boruta.py  __init__.py  base.py  structures.py
test/: test_algorithm.py  test_containers.py
tests/: test_algorithm.py
